--- a/views/home.erb
+++ b/views/home.erb
@@ -8,6 +8,37 @@
     <script src="main.js"></script>
 </head>
 <body>
+
     <h2>Home</h2>
+
+<div>
+
+    <h3>Please create an account</h3>
+
+    <form  class="" method="post" action="/users/new">
+        <input type="text" name="[post]fname" placeholder="First Name">
+        <input type="text" name="[post]lname" placeholder="Last Name">
+        <input type="text" name="[post]email" placeholder="Email">
+        <input type="text" name="[post]password" placeholder="Password">
+        <input type="submit" name="" value="Submit">
+    </form>
+
+</div>
+
+<div>
+
+    <h3>Sign In</h3>
+
+    <form method="post" action="/sign-in">
+        <input type="text" name="fname" placeholder="First Name">
+        <input type="text" name="password" placeholder="Password">
+        <input type="submit" value="Submit">
+    </form>
+
+</div>
+
+
+
+
 </body>
 </html>
