--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,9 +17,17 @@
     </ul>
 
     <% if current_user == nil %>
+
         <p>Not signed in </p>
+
      <% else %>
+
         <p>Signed in as: </span class="layout-user"><%=current_user.fname %> <%=current_user.lname %></span></p>
+
+        <form method="post" action="/sign-out">
+            <input type="submit" name="" value="Sign Out">
+        </form>
+
     <% end%>
 
 <%=yield%>
