--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/users">Users</a></li>
         <li><a href="/posts">Posts</a></li>
+        <li><a href="/profile">Profile</a></li>
     </ul>
 
     <% if current_user == nil %>
