--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,13 +8,18 @@
     <script src="main.js"></script>
 </head>
 <body>
+
+<div class="logo">
+    <img src="/logo.png"></img>
+</div>
+
 <h1>Welcome</h2>
 
     <ul class="nav">
         <li><a href="/">Home</a></li>
         <li><a href="/users">Users</a></li>
         <li><a href="/posts">Posts</a></li>
-        <li><a href="/profile">Profile</a></li>
+        <%if current_user %><else><a href="/profile">Profile</a></li><%end%>
     </ul>
 
     <% if current_user == nil %>
