--- a/views/posts.erb
+++ b/views/posts.erb
@@ -10,11 +10,9 @@
     
     </h2>
 
-        <% @posts.each do |post| %>
-            <h3><%= post.title %></h3>
-            <p>
-                <%= post.content %>
-            </p>
+        <% @posts.reverse.each do |post| %>
+            <h3><%= post.id %>. <%= post.title %></h3>
+            <p><%= post.content %></p>
         <%end %>
    
 </body>
