--- a/views/profile.erb
+++ b/views/profile.erb
@@ -14,19 +14,25 @@
 
     <h3>Create A Post</h3>
 
+<div>
     <form  class="" method="post" action="/newpost">
         <input type="text" name="[post]title" placeholder="Title">
         <input type="text" name="[post]content" placeholder="Content">
         <input type="text" name="[post]user_id" value="<%= current_user.id %>" style="display:none">
         <input type="submit" name="" value="Submit">
     </form>
+</div>
 
-    <% @posts.each do |post| %>
-        <h3><%= post.title %></h3>
-        <p>
-            <%= post.content %>
-        </p>
+<div>
+    <% @posts.reverse.each do |post| %>
+        <div>
+
+            <h3><%= post.id %>. <%= post.title %></h3>
+            <p> <%= post.content %> </p>
+
+        </div>
     <%end %>
+</div>
 
 </body>
 </html>
