Update profile functionality works but error on redirect, will continue work Sunday 4/8

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,7 @@
         <li><a href="/users">Users</a></li>
         <li><a href="/posts">Posts</a></li>
         <%if current_user %><else><a href="/profile">Profile</a></li><%end%>
+        <%if current_user %><else><a href="/profile/<%=current_user.id %>/edit">Edit Your Profile</a></li><%end%>
     </ul>
 
     <% if current_user == nil %>
