--- a/views/profile.erb
+++ b/views/profile.erb
@@ -37,6 +37,10 @@
 
         </div>
     <%end %>
+    <form action="/profile/<%= current_user.id %>" method="POST">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="Delete Your Account">
+    </form>
 </div>
 
 </body>
