Links enabling users to visit other users' profile pages

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -10,7 +10,7 @@
 <body>
 
 
-    <h2>Welcome to your profile <%=current_user.fname%></h2>
+    <h2>Hey there <%= current_user.fname %>, we're glad you're here!</h2>
 
     <h3>Create A Post</h3>
 
