--- a/views/users.erb
+++ b/views/users.erb
@@ -10,7 +10,7 @@
 <body>
     <h2>Users</h2>
     <% @users.each do |user| %>
-    <p><%= user.fname %> <%= user.lname %></p>
+    <p><a href="/profile/<%= user.id %>"><%= user.fname %> <%= user.lname %></a></p>
     <p>Email: <%= user.email %> </p>
     <p>Password: <%= user.password %></p>
     <% end %>
