--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,122 @@
+#layout-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr minmax(225px, auto) 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr minmax(100px, auto) 1fr;
+    font-family: helvetica;
+}
+
+a {
+    text-decoration: none;
+    
+}
+
+#logodiv {
+    grid-column: 3/4;
+}
+
+#welcome {
+    grid-column: 2/3;
+    grid-row: 1;
+    justify-self: right;
+
+}
+
+#nav-grid {
+    grid-column: 4/6;
+    grid-row: 1;
+    justify-self: left;
+}
+
+#not-signed-in {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    justify-self: center;
+}
+
+#create-account {
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+#sign-in {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+#greeting {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    justify-self: center;
+}
+
+#user-posts {
+    grid-column: 1/4;
+    grid-row: 5/6;
+    justify-self: center;
+    padding-right: 20em;
+}
+
+#new-post-form {
+    grid-column: 3/4;
+    grid-row: 4/5;
+    align-self: center;
+    justify-self: left;
+}
+
+#create-post {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    justify-self: center;
+    padding-left: 8em;
+}
+
+#personalized-pf {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    justify-self: center;
+}
+
+#sign-out {
+    justify-self: center;
+}
+
+#update-pf-text {
+    grid-column: 2/4;
+    grid-row: 4/5;
+    display: flex;
+    padding-bottom: 3em;
+    margin: 0;
+}
+
+#edit-pf-form {
+    grid-column: 2/4;
+    grid-row: 5/6;
+}
+
+#user-list {
+    grid-column: 3/4;
+    grid-row: 5/6;
+}
+
+#user-header {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+#posts-list {
+    grid-column: 3/4;
+    grid-row: 5/6;
+}
+
+#posts-header {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+
+
+
+
 .nav li {
     display: inline;
 }
@@ -6,7 +125,3 @@
     font-weight: bold;
 }
 
-.logo {
- 
-   
-}
