--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,12 +1,12 @@
 <html>
-<head>
+<%# <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
-</head>
+</head> %>
 
     <h3>Update This Post</h3>
 
@@ -21,4 +21,4 @@
 </div>
 
 
-<body>
+</body>
